Fix links to work in mkdocs v1

--- a/docs/minutes/June-11-2013.md
+++ b/docs/minutes/June-11-2013.md
@@ -24,7 +24,7 @@ The doodle poll for the meeting date and time is here.
 ### Officers Reports:
 
 -   Council Chair - Ruth Pordes
-    -   Status of [Action Items](CouncilActionItems) - Ruth Pordes
+    -   Status of [Action Items](../CouncilActionItems.md) - Ruth Pordes
     -   2014 AHM - Amber Boehlnlein
 
 -   Executive Director - Report - Lothar Bauerdick
